Improved about, added map

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -7,6 +7,8 @@ permalink: /
 
 {% include about.html %}
 
+{% include location-map.html %}
+
 {% include venue.html %}
 
 {% include partners.html %}
