add venue location to Attending page

--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -22,6 +22,11 @@ All participants need to buy tickets for the conference, including those who par
 Tickets for the conference are sold on this website <a href="/#tickets">on the main page</a>.
 </p>
 
+<h3>Venue</h3>
+
+The user conference will be held at the Faculty of Civil Engineering at Slovak University of Technology. Here is the location of the entrance on 
+<a href="https://www.google.com/maps/place/48%C2%B009'07.4%22N+17%C2%B006'55.3%22E/@48.1519912,17.1144491,287m/data=!3m1!1e3!4m4!3m3!8m2!3d48.1520556!4d17.1153611?entry=ttu">Google Maps</a>.
+
 <h3>Visas</h3>
 
 <p>
