minor text tweaks

--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -17,9 +17,9 @@ image: call-for-papers.jpg
 <h3>Tickets</h3>
 
 <p>
-All participants need to buy tickets for the conference, including those who participate with a talk or a workshop.
+You can buy tickets for the conference here <a href="/#tickets">on the main page</a>.
 </p><p>
-Tickets for the conference are sold on this website <a href="/#tickets">on the main page</a>.
+All participants need a ticket for the conference, including those who give a talk or a workshop.
 </p>
 
 <h3>Venue</h3>
