--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -70,6 +70,18 @@ The conference starts on Monday morning (9:00), and finishes Tuesday late aftern
 <p>
 Attendants need to organize their own accommodation. Bratislava offers a wide variety of hotels at different price points. Check out Booking, Airbnb or your favourite hotel search website.
 </p>
+<p>
+Some recommended hotels in walking distance from the venue:
+<ul>
+<li><a href="https://www.hotelsaffron.sk/en/">Hotel Saffron</a> **** (<a href="https://www.google.com/maps/place/Hotel+Saffron/@48.1525788,17.1176776,17z/data=!4m9!3m8!1s0x476c894ee6aebd9d:0xc226f3eb5de48f9c!5m2!4m1!1i2!8m2!3d48.1528294!4d17.1181922!16s%2Fg%2F1hc6y03_k?entry=ttu">google maps</a>)
+
+<li><a href="https://www.marriott.com/en-us/hotels/btsar-ac-hotel-bratislava-old-town/overview/">AC Hotel Bratislava Old Town</a> **** (<a href="https://www.google.com/maps/place/AC+Hotel+Bratislava+Old+Town/@48.148198,17.1077319,17z/data=!4m9!3m8!1s0x476c89aceed1be1d:0x1252e9eee95d528d!5m2!4m1!1i2!8m2!3d48.1481324!4d17.1090095!16s%2Fg%2F11jj2v4l6p?entry=ttu">google maps</a>)
+
+<li><a href="https://myhotel.sk/en/metropolitan-star-hotel">Metropolitan Star Hotel</a> **** (<a href="https://www.google.com/maps/place/Metropolitan+Star+Apart+hotel/@48.149823,17.1098026,17z/data=!4m9!3m8!1s0x476c895ab8171ea1:0x3dcafb5140b4645!5m2!4m1!1i2!8m2!3d48.1498789!4d17.1103796!16s%2Fg%2F11q96hv1y6?entry=ttu">google maps</a>)
+
+<li><a href="https://www.lofthotel.sk/en">Loft Hotel Bratislava</a> **** (<a href="https://www.google.com/maps/place/Loft+Hotel+Bratislava/@48.1518988,17.1062406,17z/data=!4m9!3m8!1s0x476c8950a3d1840b:0x8ea4bd1b256a9d0c!5m2!4m1!1i2!8m2!3d48.1519321!4d17.107188!16s%2Fg%2F1q62h6n7b?entry=ttu">google maps</a>)
+</ul>
+</p>
 
 </div>
 </div>
