--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -26,7 +26,7 @@ image: call-for-papers.jpg
 
                 
 <p>
-Get ready to dive deep into all things QGIS! We're working on finalizing the schedule for talks, workshops, and other exciting conference events. Expect more details to land sometime in May.
+Get ready to dive deep into all things QGIS! We're working on finalizing the schedule for talks, workshops, and other exciting conference events. A list of talks and workshops that have been confirmed (below) keeps growing!
 </p><p>
 Here's a sneak peek of what you can expect:
 
@@ -34,6 +34,50 @@ Here's a sneak peek of what you can expect:
 <li>Over 50 talks and 15+ workshops spread across 6 rooms – that's a ton of QGIS knowledge to be shared!
 <li>Topics will cover everything you love about QGIS – from cool use cases and advanced workflows to deep dives into new features and the latest buzz in the QGIS community.
 </ul>
+
+<h3>Confirmed Talks</h3>
+<p>
+<ul>
+<!-- talks_start -->
+<li style="margin: 10px 0;"><b>qgis-js - QGIS core ported to WebAssembly to run it on the web platform</b><br/>Michael Schmuki
+<li style="margin: 10px 0;"><b>Beyond the NDVI: Hyperspectral remote sensing in QGIS with the EnMAP-Box</b><br/>Benjamin Jakimow
+<li style="margin: 10px 0;"><b>Creating a random city map using the graphical modeler</b><br/>Philipp Schüller
+<li style="margin: 10px 0;"><b>Delivering the perfect QGIS installation and environment to your users</b><br/>Johannes Kröger
+<li style="margin: 10px 0;"><b>QGIS website renovation</b><br/>Aliaksandra Tsiatserkina
+<li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo
+<li style="margin: 10px 0;"><b>WAPlugin: a QGIS solution for accessing, validating, and analyzing FAO WaPOR data</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
+<li style="margin: 10px 0;"><b>The hitchhikers guide to Copernicus data access</b><br/>Aron Gergely
+<li style="margin: 10px 0;"><b>Success stories of Mergin Maps and QGIS</b><br/>Peter Petrik, Tomas Mizera
+<li style="margin: 10px 0;"><b>Superpower your Widgets</b><br/>Dave Signer
+<li style="margin: 10px 0;"><b>Latest improvements in QGIS 3D and point clouds</b><br/>Stefanos Natsis
+<li style="margin: 10px 0;"><b>Pizza symbols</b><br/>Raymond Nijssen
+<li style="margin: 10px 0;"><b>The case of transforming attitude towards open source in public administration</b><br/>Oleksii Boiko
+<li style="margin: 10px 0;"><b>Monitoring urban densification using QGIS</b><br/>Philipp Schüller
+<li style="margin: 10px 0;"><b>Integrating Mapstore2 with QGIS Server For Printing QGIS Layouts</b><br/>Marco Teixeira, Ricardo Furtado Ponte
+<li style="margin: 10px 0;"><b>State of the PCRaster Tools plugin</b><br/>Hans van der Kwast
+<li style="margin: 10px 0;"><b>Presentation of Two QGIS Roles - QGIS Documentation Writer and QGIS Full Stack Web Developer</b><br/>Lova, Selma
+<li style="margin: 10px 0;"><b>Mergin Maps: Modern field data collection tool</b><br/>Peter Petrik, Tomas Mizera
+<li style="margin: 10px 0;"><b>Procedural art with QGIS</b><br/>Johannes Kröger
+<li style="margin: 10px 0;"><b>Advantages of QGIS environment powered by Nix</b><br/>Ivan Minčík - @imincik
+<!-- talks_end -->
+</ul>
+</p>
+
+
+<h3>Confirmed Workshops</h3>
+<p>
+<ul>
+<li style="margin: 10px 0;"><b>Building 3D map views in QGIS</b><br/>Stefanos Natsis
+<li style="margin: 10px 0;"><b>Work with data relations in QGIS</b><br/>Dave Signer
+<li style="margin: 10px 0;"><b>Advancing water productivity monitoring in agriculture: Analyse and validate FAO WaPOR open data using the WAPlugin in QGIS</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
+<li style="margin: 10px 0;"><b>Hands-on qgis-js: Building interactive QGIS based Web Maps from Scratch</b><br/>Michael Schmuki
+<li style="margin: 10px 0;"><b>Hydrological analysis with the PCRaster Tools plugin in QGIS</b><br/>Hans van der Kwast
+<li style="margin: 10px 0;"><b>Mergin Maps Admin Essentials</b><br/>Peter Petrik, Tomas Mizera
+<li style="margin: 10px 0;"><b>Designing an object with Blender3D for use in QGIS 3D</b><br/>Raymond Nijssen
+</ul>
+</p>
+
+
 
 <h3>Talks</h3>
 
