More confirmed talks and workshops

--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -42,19 +42,29 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>qgis-js - QGIS core ported to WebAssembly to run it on the web platform</b><br/>Michael Schmuki
 <li style="margin: 10px 0;"><b>Beyond the NDVI: Hyperspectral remote sensing in QGIS with the EnMAP-Box</b><br/>Benjamin Jakimow
 <li style="margin: 10px 0;"><b>Creating a random city map using the graphical modeler</b><br/>Philipp Schüller
+<li style="margin: 10px 0;"><b>Environmental Data Retrieval (EDR) a new OGC standard and its implementation in QGIS</b><br/>Saber Razmjooei
+<li style="margin: 10px 0;"><b>Geoharmony: A QGIS Plugin Unveiling Satellite Insights for Sustainable Development Syner-gy and Ecological Rejuvenation"</b><br/>Berit Mohr
 <li style="margin: 10px 0;"><b>Delivering the perfect QGIS installation and environment to your users</b><br/>Johannes Kröger
 <li style="margin: 10px 0;"><b>QGIS website renovation</b><br/>Aliaksandra Tsiatserkina
 <li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo
+<li style="margin: 10px 0;"><b>From Data to Decisions: Empowering Groundwater Professionals with a QGIS Plugin</b><br/>Jakob Lanstorp, Martin Kynde
 <li style="margin: 10px 0;"><b>WAPlugin: a QGIS solution for accessing, validating, and analyzing FAO WaPOR data</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>The hitchhikers guide to Copernicus data access</b><br/>Aron Gergely
+<li style="margin: 10px 0;"><b>Working with Point Cloud Data in QGIS</b><br/>Kurt Menke
 <li style="margin: 10px 0;"><b>Success stories of Mergin Maps and QGIS</b><br/>Peter Petrik, Tomas Mizera
 <li style="margin: 10px 0;"><b>Superpower your Widgets</b><br/>Dave Signer
 <li style="margin: 10px 0;"><b>Latest improvements in QGIS 3D and point clouds</b><br/>Stefanos Natsis
+<li style="margin: 10px 0;"><b>Native QGIS geological model setup for Africa addressing groundwater scarcity and resilience against climate change</b><br/>Jakob Lanstorp, Martin Kynde
 <li style="margin: 10px 0;"><b>Pizza symbols</b><br/>Raymond Nijssen
+<li style="margin: 10px 0;"><b>Computing Omnidirectional Landscape Connectivity with QGIS and Omniscape.jl</b><br/>Kurt Menke
+<li style="margin: 10px 0;"><b>QGIS Uses and Applications for Utility Scale Solar Development</b><br/>Marco Antonio Alvarez Patino
 <li style="margin: 10px 0;"><b>The case of transforming attitude towards open source in public administration</b><br/>Oleksii Boiko
 <li style="margin: 10px 0;"><b>Monitoring urban densification using QGIS</b><br/>Philipp Schüller
 <li style="margin: 10px 0;"><b>Integrating Mapstore2 with QGIS Server For Printing QGIS Layouts</b><br/>Marco Teixeira, Ricardo Furtado Ponte
 <li style="margin: 10px 0;"><b>State of the PCRaster Tools plugin</b><br/>Hans van der Kwast
+<li style="margin: 10px 0;"><b>Using QGIS and open-source data to develop a light touch geospatial methodology to identify barriers supply chains face to deliver routine immunizations at the district level</b><br/>Steffanie Sinclair-Chritz
+<li style="margin: 10px 0;"><b>QGIS for Secondary Education and Citizen Science: Lowering the barrier by customizing the user interface</b><br/>Serkan Girgin, Jaykumar Gohil
+<li style="margin: 10px 0;"><b>Open data provided by UGKK SR</b><br/>Tomáš Dekan
 <li style="margin: 10px 0;"><b>Presentation of Two QGIS Roles - QGIS Documentation Writer and QGIS Full Stack Web Developer</b><br/>Lova, Selma
 <li style="margin: 10px 0;"><b>Mergin Maps: Modern field data collection tool</b><br/>Peter Petrik, Tomas Mizera
 <li style="margin: 10px 0;"><b>Procedural art with QGIS</b><br/>Johannes Kröger
@@ -68,6 +78,7 @@ Here's a sneak peek of what you can expect:
 <p>
 <ul>
 <li style="margin: 10px 0;"><b>Building 3D map views in QGIS</b><br/>Stefanos Natsis
+<li style="margin: 10px 0;"><b>Large Language Models and GIS</b><br/>Gustavo Garcia
 <li style="margin: 10px 0;"><b>Work with data relations in QGIS</b><br/>Dave Signer
 <li style="margin: 10px 0;"><b>Advancing water productivity monitoring in agriculture: Analyse and validate FAO WaPOR open data using the WAPlugin in QGIS</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>Hands-on qgis-js: Building interactive QGIS based Web Maps from Scratch</b><br/>Michael Schmuki
