Add speakers, more confirmed talks, button on hero image

--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -47,12 +47,14 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Delivering the perfect QGIS installation and environment to your users</b><br/>Johannes Kröger
 <li style="margin: 10px 0;"><b>QGIS website renovation</b><br/>Aliaksandra Tsiatserkina
 <li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo
+<li style="margin: 10px 0;"><b>Transformation from a "GIS enthusiast" to a GIS administrator - a description of deployment cases carried out in small and medium-sized companies.</b><br/>Michał Drożdż
 <li style="margin: 10px 0;"><b>From Data to Decisions: Empowering Groundwater Professionals with a QGIS Plugin</b><br/>Jakob Lanstorp, Martin Kynde
 <li style="margin: 10px 0;"><b>WAPlugin: a QGIS solution for accessing, validating, and analyzing FAO WaPOR data</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>The hitchhikers guide to Copernicus data access</b><br/>Aron Gergely
 <li style="margin: 10px 0;"><b>Working with Point Cloud Data in QGIS</b><br/>Kurt Menke
 <li style="margin: 10px 0;"><b>Success stories of Mergin Maps and QGIS</b><br/>Peter Petrik, Tomas Mizera
 <li style="margin: 10px 0;"><b>Superpower your Widgets</b><br/>Dave Signer
+<li style="margin: 10px 0;"><b>QGIS Expressions for Fun and Profit</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Latest improvements in QGIS 3D and point clouds</b><br/>Stefanos Natsis
 <li style="margin: 10px 0;"><b>Native QGIS geological model setup for Africa addressing groundwater scarcity and resilience against climate change</b><br/>Jakob Lanstorp, Martin Kynde
 <li style="margin: 10px 0;"><b>Pizza symbols</b><br/>Raymond Nijssen
@@ -77,13 +79,15 @@ Here's a sneak peek of what you can expect:
 <h3>Confirmed Workshops</h3>
 <p>
 <ul>
+<li style="margin: 10px 0;"><b>Cloud Native Geospatial Workflows with QGIS</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Building 3D map views in QGIS</b><br/>Stefanos Natsis
-<li style="margin: 10px 0;"><b>Large Language Models and GIS</b><br/>Gustavo Garcia
+<li style="margin: 10px 0;"><b>Large Language Models and GIS</b><br/>Gustavo Garcia, Mahdi Farnaghi, Zehao Lu
 <li style="margin: 10px 0;"><b>Work with data relations in QGIS</b><br/>Dave Signer
 <li style="margin: 10px 0;"><b>Advancing water productivity monitoring in agriculture: Analyse and validate FAO WaPOR open data using the WAPlugin in QGIS</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>Hands-on qgis-js: Building interactive QGIS based Web Maps from Scratch</b><br/>Michael Schmuki
 <li style="margin: 10px 0;"><b>Hydrological analysis with the PCRaster Tools plugin in QGIS</b><br/>Hans van der Kwast
 <li style="margin: 10px 0;"><b>Mergin Maps Admin Essentials</b><br/>Peter Petrik, Tomas Mizera
+<li style="margin: 10px 0;"><b>Building Your First QGIS Plugin</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Designing an object with Blender3D for use in QGIS 3D</b><br/>Raymond Nijssen
 </ul>
 </p>
