more confirmed talks

--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -46,6 +46,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Geoharmony: A QGIS Plugin Unveiling Satellite Insights for Sustainable Development Syner-gy and Ecological Rejuvenation"</b><br/>Berit Mohr
 <li style="margin: 10px 0;"><b>Delivering the perfect QGIS installation and environment to your users</b><br/>Johannes Kröger
 <li style="margin: 10px 0;"><b>QGIS website renovation</b><br/>Aliaksandra Tsiatserkina
+<li style="margin: 10px 0;"><b>Learn how to create user friendly layout templates</b><br/>Mie Winstrup
 <li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo
 <li style="margin: 10px 0;"><b>Transformation from a "GIS enthusiast" to a GIS administrator - a description of deployment cases carried out in small and medium-sized companies.</b><br/>Michał Drożdż
 <li style="margin: 10px 0;"><b>From Data to Decisions: Empowering Groundwater Professionals with a QGIS Plugin</b><br/>Jakob Lanstorp, Martin Kynde
@@ -70,6 +71,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Presentation of Two QGIS Roles - QGIS Documentation Writer and QGIS Full Stack Web Developer</b><br/>Lova, Selma
 <li style="margin: 10px 0;"><b>Mergin Maps: Modern field data collection tool</b><br/>Peter Petrik, Tomas Mizera
 <li style="margin: 10px 0;"><b>Procedural art with QGIS</b><br/>Johannes Kröger
+<li style="margin: 10px 0;"><b>G3W-SUITE and QGIS integration: state of the art, latest developments and future prospects</b><br/>Walter Lorenzetti
 <li style="margin: 10px 0;"><b>Advantages of QGIS environment powered by Nix</b><br/>Ivan Minčík - @imincik
 <!-- talks_end -->
 </ul>
