--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -42,30 +42,41 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>qgis-js - QGIS core ported to WebAssembly to run it on the web platform</b><br/>Michael Schmuki
 <li style="margin: 10px 0;"><b>Beyond the NDVI: Hyperspectral remote sensing in QGIS with the EnMAP-Box</b><br/>Benjamin Jakimow
 <li style="margin: 10px 0;"><b>Creating a random city map using the graphical modeler</b><br/>Philipp Schüller
+<li style="margin: 10px 0;"><b>Visualize planning projects in 3D</b><br/>Karl-Magnus Jönsson
 <li style="margin: 10px 0;"><b>Environmental Data Retrieval (EDR) a new OGC standard and its implementation in QGIS</b><br/>Saber Razmjooei
 <li style="margin: 10px 0;"><b>Geoharmony: A QGIS Plugin Unveiling Satellite Insights for Sustainable Development Syner-gy and Ecological Rejuvenation"</b><br/>Berit Mohr
 <li style="margin: 10px 0;"><b>Delivering the perfect QGIS installation and environment to your users</b><br/>Johannes Kröger
+<li style="margin: 10px 0;"><b>Everything I learned building AI models for QGIS</b><br/>Brendan Ashworth
 <li style="margin: 10px 0;"><b>QGIS website renovation</b><br/>Aliaksandra Tsiatserkina
 <li style="margin: 10px 0;"><b>Learn how to create user friendly layout templates</b><br/>Mie Winstrup
 <li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo
+<li style="margin: 10px 0;"><b>QGIS applications in transport planning: case studies of cycling and public transport support</b><br/>Marian Gogola
+<li style="margin: 10px 0;"><b>Exploring Advanced Data Integrations with Speckle</b><br/>Kateryna Konieva
 <li style="margin: 10px 0;"><b>Transformation from a "GIS enthusiast" to a GIS administrator - a description of deployment cases carried out in small and medium-sized companies.</b><br/>Michał Drożdż
 <li style="margin: 10px 0;"><b>From Data to Decisions: Empowering Groundwater Professionals with a QGIS Plugin</b><br/>Jakob Lanstorp, Martin Kynde
 <li style="margin: 10px 0;"><b>WAPlugin: a QGIS solution for accessing, validating, and analyzing FAO WaPOR data</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>The hitchhikers guide to Copernicus data access</b><br/>Aron Gergely
 <li style="margin: 10px 0;"><b>Working with Point Cloud Data in QGIS</b><br/>Kurt Menke
 <li style="margin: 10px 0;"><b>Success stories of Mergin Maps and QGIS</b><br/>Peter Petrik, Tomas Mizera
+<li style="margin: 10px 0;"><b>QGIS & INSPIRE/SDI</b><br/>Martin Tuchyna
 <li style="margin: 10px 0;"><b>Superpower your Widgets</b><br/>Dave Signer
+<li style="margin: 10px 0;"><b>PgMetadata - A QGIS plugin to store the metadata of PostgreSQL layers inside the database, and use them inside QGIS</b><br/>Etienne Trimaille, René-Luc Dhont
 <li style="margin: 10px 0;"><b>QGIS Expressions for Fun and Profit</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Latest improvements in QGIS 3D and point clouds</b><br/>Stefanos Natsis
 <li style="margin: 10px 0;"><b>Native QGIS geological model setup for Africa addressing groundwater scarcity and resilience against climate change</b><br/>Jakob Lanstorp, Martin Kynde
 <li style="margin: 10px 0;"><b>Pizza symbols</b><br/>Raymond Nijssen
 <li style="margin: 10px 0;"><b>Computing Omnidirectional Landscape Connectivity with QGIS and Omniscape.jl</b><br/>Kurt Menke
+<li style="margin: 10px 0;"><b>Search and Rescue Misson Support</b><br/>Jan Růžička
 <li style="margin: 10px 0;"><b>QGIS Uses and Applications for Utility Scale Solar Development</b><br/>Marco Antonio Alvarez Patino
+<li style="margin: 10px 0;"><b>Migration of mobile network management data from spreadsheets to QGIS and PostGIS</b><br/>Immo Blecher
 <li style="margin: 10px 0;"><b>The case of transforming attitude towards open source in public administration</b><br/>Oleksii Boiko
+<li style="margin: 10px 0;"><b>State of Lizmap - Past / Present / Futur</b><br/>Etienne Trimaille, René-Luc Dhont
 <li style="margin: 10px 0;"><b>Monitoring urban densification using QGIS</b><br/>Philipp Schüller
 <li style="margin: 10px 0;"><b>Integrating Mapstore2 with QGIS Server For Printing QGIS Layouts</b><br/>Marco Teixeira, Ricardo Furtado Ponte
 <li style="margin: 10px 0;"><b>State of the PCRaster Tools plugin</b><br/>Hans van der Kwast
+<li style="margin: 10px 0;"><b>Data quality with Field Domain or Attributes Form</b><br/>Jeroen Hovens
 <li style="margin: 10px 0;"><b>Using QGIS and open-source data to develop a light touch geospatial methodology to identify barriers supply chains face to deliver routine immunizations at the district level</b><br/>Steffanie Sinclair-Chritz
+<li style="margin: 10px 0;"><b>Web meets Desktop: a business logic implemented in Django ORM and delivered through OGC API - Features</b><br/>Denis Rouzaud
 <li style="margin: 10px 0;"><b>QGIS for Secondary Education and Citizen Science: Lowering the barrier by customizing the user interface</b><br/>Serkan Girgin, Jaykumar Gohil
 <li style="margin: 10px 0;"><b>Open data provided by UGKK SR</b><br/>Tomáš Dekan
 <li style="margin: 10px 0;"><b>Presentation of Two QGIS Roles - QGIS Documentation Writer and QGIS Full Stack Web Developer</b><br/>Lova, Selma
@@ -81,6 +92,7 @@ Here's a sneak peek of what you can expect:
 <h3>Confirmed Workshops</h3>
 <p>
 <ul>
+<li style="margin: 10px 0;"><b>Publish your QGIS project (layers, forms, print layout...) on the internet using Lizmap</b><br/>Etienne Trimaille, René-Luc Dhont
 <li style="margin: 10px 0;"><b>Cloud Native Geospatial Workflows with QGIS</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Building 3D map views in QGIS</b><br/>Stefanos Natsis
 <li style="margin: 10px 0;"><b>Large Language Models and GIS</b><br/>Gustavo Garcia, Mahdi Farnaghi, Zehao Lu
@@ -88,6 +100,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Advancing water productivity monitoring in agriculture: Analyse and validate FAO WaPOR open data using the WAPlugin in QGIS</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>Hands-on qgis-js: Building interactive QGIS based Web Maps from Scratch</b><br/>Michael Schmuki
 <li style="margin: 10px 0;"><b>Hydrological analysis with the PCRaster Tools plugin in QGIS</b><br/>Hans van der Kwast
+<li style="margin: 10px 0;"><b>QGIS - Ask me anything!</b><br/>Marco Bernasocchi, Denis Rouzaud
 <li style="margin: 10px 0;"><b>Mergin Maps Admin Essentials</b><br/>Peter Petrik, Tomas Mizera
 <li style="margin: 10px 0;"><b>Building Your First QGIS Plugin</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Designing an object with Blender3D for use in QGIS 3D</b><br/>Raymond Nijssen
