add hotel arcus with discount

--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -80,6 +80,8 @@ Some recommended hotels in walking distance from the venue:
 <li style="margin: 15px 0;"><a href="https://myhotel.sk/en/metropolitan-star-hotel">Metropolitan Star Hotel</a> **** (<a href="https://www.google.com/maps/place/Metropolitan+Star+Apart+hotel/@48.149823,17.1098026,17z/data=!4m9!3m8!1s0x476c895ab8171ea1:0x3dcafb5140b4645!5m2!4m1!1i2!8m2!3d48.1498789!4d17.1103796!16s%2Fg%2F11q96hv1y6?entry=ttu">google maps</a>) - use their <a href="https://myhotel.sk/en/reservation">reservation system</a> with "QGIS-UC24" discount code to get 10% discount!
 
 <li style="margin: 15px 0;"><a href="https://www.lofthotel.sk/en">Loft Hotel Bratislava</a> **** (<a href="https://www.google.com/maps/place/Loft+Hotel+Bratislava/@48.1518988,17.1062406,17z/data=!4m9!3m8!1s0x476c8950a3d1840b:0x8ea4bd1b256a9d0c!5m2!4m1!1i2!8m2!3d48.1519321!4d17.107188!16s%2Fg%2F1q62h6n7b?entry=ttu">google maps</a>)
+
+<li style="margin: 15px 0;"><a href="https://hotelarcus.sk/en/">Hotel Arcus</a> *** (<a href="https://www.google.com/maps/place/Hotel+Arcus/@48.1514665,17.1187756,17z/data=!3m1!4b1!4m9!3m8!1s0x476c8948e70e3285:0xc6be76474bf9dd25!5m2!4m1!1i2!8m2!3d48.1514665!4d17.1213505!16s%2Fg%2F1tnmqhzv?entry=ttu">google maps</a>) - use their <a href="https://hotelarcus.sk/accommodation/">reservation system</a> or <a href="mailto:info@hotelarcus.sk">email</a> and add a mention of the QGIS conference to get 10% discount!
 </ul>
 </p>
 
