more confirmed talks

--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -49,7 +49,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Everything I learned building AI models for QGIS</b><br/>Brendan Ashworth
 <li style="margin: 10px 0;"><b>QGIS website renovation</b><br/>Aliaksandra Tsiatserkina
 <li style="margin: 10px 0;"><b>Learn how to create user friendly layout templates</b><br/>Mie Winstrup
-<li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo
+<li style="margin: 10px 0;"><b>Rethinking urban health by measuring and mapping walkability with Q-GIS in the Global South.</b><br/>Ricardo Pozo, Susana Belén Mizhquiri Macías
 <li style="margin: 10px 0;"><b>QGIS applications in transport planning: case studies of cycling and public transport support</b><br/>Marian Gogola
 <li style="margin: 10px 0;"><b>Exploring Advanced Data Integrations with Speckle</b><br/>Kateryna Konieva
 <li style="margin: 10px 0;"><b>Transformation from a "GIS enthusiast" to a GIS administrator - a description of deployment cases carried out in small and medium-sized companies.</b><br/>Michał Drożdż
@@ -71,6 +71,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Migration of mobile network management data from spreadsheets to QGIS and PostGIS</b><br/>Immo Blecher
 <li style="margin: 10px 0;"><b>The case of transforming attitude towards open source in public administration</b><br/>Oleksii Boiko
 <li style="margin: 10px 0;"><b>State of Lizmap - Past / Present / Futur</b><br/>Etienne Trimaille, René-Luc Dhont
+<li style="margin: 10px 0;"><b>Discover the QGIS Hub Plugin: Empowering users to share and access diverse QGIS resources effortlessly</b><br/>Ismail Sunni
 <li style="margin: 10px 0;"><b>Monitoring urban densification using QGIS</b><br/>Philipp Schüller
 <li style="margin: 10px 0;"><b>Integrating Mapstore2 with QGIS Server For Printing QGIS Layouts</b><br/>Marco Teixeira, Ricardo Furtado Ponte
 <li style="margin: 10px 0;"><b>State of the PCRaster Tools plugin</b><br/>Hans van der Kwast
