--- a/_pages/schedule.html
+++ b/_pages/schedule.html
@@ -54,6 +54,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Exploring Advanced Data Integrations with Speckle</b><br/>Kateryna Konieva
 <li style="margin: 10px 0;"><b>Transformation from a "GIS enthusiast" to a GIS administrator - a description of deployment cases carried out in small and medium-sized companies.</b><br/>Michał Drożdż
 <li style="margin: 10px 0;"><b>From Data to Decisions: Empowering Groundwater Professionals with a QGIS Plugin</b><br/>Jakob Lanstorp, Martin Kynde
+<li style="margin: 10px 0;"><b>QField 3 - Fieldwork redefined</b><br/>Marco Bernasocchi
 <li style="margin: 10px 0;"><b>WAPlugin: a QGIS solution for accessing, validating, and analyzing FAO WaPOR data</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>The hitchhikers guide to Copernicus data access</b><br/>Aron Gergely
 <li style="margin: 10px 0;"><b>Working with Point Cloud Data in QGIS</b><br/>Kurt Menke
@@ -70,7 +71,9 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>QGIS Uses and Applications for Utility Scale Solar Development</b><br/>Marco Antonio Alvarez Patino
 <li style="margin: 10px 0;"><b>Migration of mobile network management data from spreadsheets to QGIS and PostGIS</b><br/>Immo Blecher
 <li style="margin: 10px 0;"><b>The case of transforming attitude towards open source in public administration</b><br/>Oleksii Boiko
+<li style="margin: 10px 0;"><b>Mapping emotional arousal in nature</b><br/>Ondrej Mitas
 <li style="margin: 10px 0;"><b>State of Lizmap - Past / Present / Futur</b><br/>Etienne Trimaille, René-Luc Dhont
+<li style="margin: 10px 0;"><b>Kart: Practical Data Versioning in QGIS and beyond</b><br/>Robert Coup
 <li style="margin: 10px 0;"><b>Discover the QGIS Hub Plugin: Empowering users to share and access diverse QGIS resources effortlessly</b><br/>Ismail Sunni
 <li style="margin: 10px 0;"><b>Monitoring urban densification using QGIS</b><br/>Philipp Schüller
 <li style="margin: 10px 0;"><b>Integrating Mapstore2 with QGIS Server For Printing QGIS Layouts</b><br/>Marco Teixeira, Ricardo Furtado Ponte
@@ -94,6 +97,7 @@ Here's a sneak peek of what you can expect:
 <p>
 <ul>
 <li style="margin: 10px 0;"><b>Publish your QGIS project (layers, forms, print layout...) on the internet using Lizmap</b><br/>Etienne Trimaille, René-Luc Dhont
+<li style="margin: 10px 0;"><b>Kart: Data versioning in QGIS</b><br/>Robert Coup
 <li style="margin: 10px 0;"><b>Cloud Native Geospatial Workflows with QGIS</b><br/>Ujaval Gandhi
 <li style="margin: 10px 0;"><b>Building 3D map views in QGIS</b><br/>Stefanos Natsis
 <li style="margin: 10px 0;"><b>Large Language Models and GIS</b><br/>Gustavo Garcia, Mahdi Farnaghi, Zehao Lu
@@ -101,6 +105,7 @@ Here's a sneak peek of what you can expect:
 <li style="margin: 10px 0;"><b>Advancing water productivity monitoring in agriculture: Analyse and validate FAO WaPOR open data using the WAPlugin in QGIS</b><br/>Hans van der Kwast, WAPlugin Team, Akshay Dhonthi
 <li style="margin: 10px 0;"><b>Hands-on qgis-js: Building interactive QGIS based Web Maps from Scratch</b><br/>Michael Schmuki
 <li style="margin: 10px 0;"><b>Hydrological analysis with the PCRaster Tools plugin in QGIS</b><br/>Hans van der Kwast
+<li style="margin: 10px 0;"><b>QField and QFieldCloud - seamless fieldwork for QGIS</b><br/>Marco Bernasocchi
 <li style="margin: 10px 0;"><b>QGIS - Ask me anything!</b><br/>Marco Bernasocchi, Denis Rouzaud
 <li style="margin: 10px 0;"><b>Mergin Maps Admin Essentials</b><br/>Peter Petrik, Tomas Mizera
 <li style="margin: 10px 0;"><b>Building Your First QGIS Plugin</b><br/>Ujaval Gandhi
