Minor updates and main entrance pin

--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -11,7 +11,7 @@ image: call-for-papers.jpg
 <div class="container">
 
 <div class="row">
-<div class="col-lg-7">
+<div class="col-lg-8">
 
 
 <h3>Tickets</h3>
@@ -24,8 +24,17 @@ All participants need a ticket for the conference, including those who give a ta
 
 <h3>Venue</h3>
 
-The user conference will be held at the Faculty of Civil Engineering at Slovak University of Technology. Here is the location of the entrance on 
-<a href="https://www.google.com/maps/place/48%C2%B009'07.4%22N+17%C2%B006'55.3%22E/@48.1519912,17.1144491,287m/data=!3m1!1e3!4m4!3m3!8m2!3d48.1520556!4d17.1153611?entry=ttu">Google Maps</a>.
+<p>
+The user conference will be held at the Faculty of Civil Engineering at Slovak University of Technology.</p>
+
+<p>
+Please note that the faculty's official address is <b>Radlinskeho</b> street, but the conference entrance is from <b>Imricha Karvasa</b> street (perpendicular to Radlinskeho). Here is the location of the main entrance on
+<a href="https://www.google.com/maps/place/48%C2%B009'07.4%22N+17%C2%B006'55.3%22E/@48.1519912,17.1144491,287m/data=!3m1!1e3!4m4!3m3!8m2!3d48.1520556!4d17.1153611?entry=ttu">Google Maps</a>:
+</p>
+
+<p>
+<a href="https://www.google.com/maps/place/48%C2%B009'07.4%22N+17%C2%B006'55.3%22E/@48.1519912,17.1144491,287m/data=!3m1!1e3!4m4!3m3!8m2!3d48.1520556!4d17.1153611?entry=ttu"><img src="/img/qgis-uc/entrance-pin.jpg" width="100%"/></a>
+</p>
 
 <h3>Visas</h3>
 
@@ -38,7 +47,7 @@ We can provide a letter of invitation after you have registered and paid for you
 <h3>Schedule</h3>
 
 <p>
-The conference starts on Monday morning (9:00), and finishes Tuesday late afternoon (around 18:00) - see more details in the <a href="/schedule">Schedule page</a>.
+The conference starts on Monday morning (9:00), and finishes Tuesday late afternoon (around 18:00) - see more in the <a href="/schedule">Schedule Overview</a> page and the full list of talks and workshops in the <a href="/schedule/details">Detailed Schedule</a> page.
 </p>
 
 <h3>Getting there</h3>
