sunday evening, code of conduct, refunds

--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -21,6 +21,9 @@ You can buy tickets for the conference here <a href="/#tickets">on the main page
 </p><p>
 All participants need a ticket for the conference, including those who give a talk or a workshop.
 </p>
+<p>
+We offer a refund when a ticket is cancelled more than 14 days before the event. Cancellations less than 14 days prior to the event are not refunded.
+</p>
 
 <h3>Venue</h3>
 
@@ -49,6 +52,19 @@ We can provide a letter of invitation after you have registered and paid for you
 <p>
 The conference starts on Monday morning (9:00), and finishes Tuesday late afternoon (around 18:00) - see more in the <a href="/schedule">Schedule Overview</a> page and the full list of talks and workshops in the <a href="/schedule/details">Detailed Schedule</a> page.
 </p>
+
+<h3>Code of conduct</h3>
+
+<p>
+This is an official QGIS event. That means that all attendees are expected to follow <a href="https://www.qgis.org/conduct/">Code of conduct</a> of the QGIS project. In short, be nice to others, so that everyone feels safe and welcome. If there is someone behaving poorly, please do not hesitate to report them to the event staff members.
+</p>
+
+<h3>Sunday warm-up and early registration</h3>
+
+<p>
+We invite you to <a href="https://www.google.com/maps/place/Viecha+modransk%C3%BDch+vin%C3%A1rov/@48.1534875,17.1166086,17z/data=!3m1!4b1!4m6!3m5!1s0x476c89313e4800af:0x7fb001ef019611c8!8m2!3d48.1534875!4d17.1191835!16s%2Fg%2F11bxfy9k4_?entry=ttu&g_ep=EgoyMDI0MDgyNi4wIKXMDSoASAFQAw%3D%3D">Viecha modranských vinárov</a> on Sunday evening (starting around 19:00) for a glass of wine, beer or non-alcoholic drink (at your own expense). The whole place is reserved for us and some snacks will be provided by the conference. We will have a registration desk there as well, in case you would like to avoid queueing for registration on Monday morning. Note: the idea to host the QGIS conference started at this place, so join us and get inspired too!
+</p>
+
 
 <h3>Getting there</h3>
 
