Added floor plan

--- a/_pages/attending.html
+++ b/_pages/attending.html
@@ -39,6 +39,17 @@ Please note that the faculty's official address is <b>Radlinskeho</b> street, bu
 <a href="https://www.google.com/maps/place/48%C2%B009'07.4%22N+17%C2%B006'55.3%22E/@48.1519912,17.1144491,287m/data=!3m1!1e3!4m4!3m3!8m2!3d48.1520556!4d17.1153611?entry=ttu"><img src="/img/qgis-uc/entrance-pin.jpg" width="100%"/></a>
 </p>
 
+
+<h3>Floor Plan</h3>
+
+<p>Most of the conference program will happen on the third floor:</p>
+
+<p>
+<img src="/img/qgis-uc/orientation_plan_small.png" width="100%"/>
+</p>
+
+
+
 <h3>Visas</h3>
 
 <p>
